# messaging-pipeline

./: .dockerignore  .env.example  .env.production  .env.staging  .eslintrc.js  .gitignore  .pre-commit-config.yaml  CI-CD.md  Dockerfile  Dockerfile.prod  Makefile  README.md  REFERENCES.md  TODOPROMPTS.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pipelineflow.md  pyproject.toml  pytest.ini  requirements.txt  scratch.sh  setup.sh  tsconfig.json
.github/workflows/: main.yml  tag-version.yml
config/: config.py
config/credentials/: README.md
scripts/: .dir_structure_cache.json  deploy_to_ec2.sh  directory_printer.py  docker-entrypoint.sh  docker-pre-commit.sh  ec2_security_setup.sh  schedule_job.py  setup.sh  setup_env_credentials.sh  setup_monitoring.sh  type_annotate_python_files.py  update_readme_structure.py
src/: __init__.py  main.py
src/automation/: __init__.py  selenium_utils.py
src/config/: environment.py
src/connectors/: __init__.py  discord_connector.py  email_connector.py  handshake_connector.py  linkedin_connector.py  slack_connector.py
src/processing/: __init__.py  message_classifier.py  nlp_processor.py
src/scheduling/: __init__.py  calendly.py  google_calendar.py
src/storage/: __init__.py  google_sheets.py
terraform/: main.tf
tests/: __init__.py  conftest.py  run_all_tests.py  run_component_tests.py  run_credential_tests.py  test_all_credentials.py  test_automation.py  test_calendly_credentials.py  test_connectors.py  test_email_credentials.py  test_processing.py  test_scheduling.py  test_sheets_access.py  test_storage.py
tests/component/: README.md  test_automation.py  test_connectors.py  test_processing.py  test_scheduling.py  test_storage.py
tests/credentials/: README.md  test_calendly_credentials.py  (+6 more)
(+4 files in other folders)
