[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.8"
dependencies = [
    # List your dependencies here
    # "requests>=2.28.0",
    # "fastapi>=0.95.0",
]

[project.optional-dependencies]
dev = [
    # Development dependencies
    # "pytest>=7.0.0",
    # "black>=23.0.0",
    # "isort>=5.12.0",
] 